--- a/.classpath
+++ b/.classpath
@@ -38,6 +38,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry excluding="**/fragments/**" kind="src" path="acme-framework-25.3.0"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Acme-Framework-25.3.0">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
