--- a/.project
+++ b/.project
@@ -36,6 +36,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+ 			<name>acme-framework-25.3.0</name>
+ 			<type>2</type>
+ 			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-25.3.0/target/classes</locationURI>
+ 		</link>
+		<link>
 			<name>target/classes</name>
 			<type>2</type>
 			<locationURI>PROJECT_LOC/target/classes</locationURI>
